--- a/src/components/lostAndFound/LostAndFound.css
+++ b/src/components/lostAndFound/LostAndFound.css
@@ -1,7 +1,7 @@
 
 
 .my-section {
-
+    
     padding-top: 2.5em;
     display: flex;
     justify-content: space-around;
@@ -40,4 +40,18 @@
     width: 100%;
     height:100%;
     object-fit: cover;
+}
+
+@media only screen and (max-width: 768px) {
+    .my-section div {
+        width: 50%;
+        height: 70%;
+        align-items: center;
+    }
+
+    .my-section div div {
+        width:70%;
+        margin: auto auto;
+        overflow:hidden;
+    }
 }
