--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -51,3 +51,9 @@
     border-color: var(--main-color);
     text-decoration: none;
 }
+
+@media only screen and (max-width: 768px) {
+    .my-nav {
+        display: none;
+    }
+}
