--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,3 +1,22 @@
 img {
     height: 6em;
 }
+
+.top-section {
+    display:flex;
+    justify-content: space-between;
+
+}
+
+.left-section {
+    display:flex;
+    margin-top: auto;
+    margin-bottom: 1em;
+    margin-right: 2em;
+    justify-content: space-between;
+}
+
+.left-section a {
+    margin-left: .5em;
+    margin-right: .5em;
+}
