--- a/src/components/lostList/LostList.css
+++ b/src/components/lostList/LostList.css
@@ -2,8 +2,7 @@
 .lost-section {
     display: flex;
     flex-wrap: wrap;
-    background-color: blue;
-    height: 100%;
+    min-height: var(--main-height);
 }
 
 .lost-right-section {
@@ -11,9 +10,10 @@
     flex-wrap: wrap;
     justify-content: center;
     padding-top: 5%;
-    height: auto;
+    min-height: var(--main-height);
 }
 
 .lost-left-section {
     border-right: 2px solid var(--second-color);
+    min-height: var(--main-height);
 }
