--- a/src/pages/root/App.css
+++ b/src/pages/root/App.css
@@ -4,6 +4,8 @@
 
   --second-color: white;
   --footer-color: rgb(13, 13, 20);
+
+  --main-height: 80vh;
 }
 
 html,
@@ -12,6 +14,17 @@ body,
 .App {
   height: 100%;
   overflow: auto;
+}
+
+button {
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+  
 }
 
 #root {
@@ -24,11 +37,25 @@ body,
 }
 
 body {
-
-
   padding-top: 1%;
   background-color: var(--main-background-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
+main {
+  min-height: var(--main-height);
+}
+
+header {
+  min-height: 20vh;
+}
+
+footer {
+
+  min-height: 10vh;
+  background-color: var(--footer-color);
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
