--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -1,9 +1,26 @@
-button {
-    background: none;
+.button {
+  background: none;
 	color: inherit;
 	border: none;
 	padding: 0;
 	font: inherit;
 	cursor: pointer;
 	outline: inherit;
+  
+}
+
+.nav__button--vertical {
+	width: 100%;
+	text-align: left;
+	padding-left: 1em;
+	padding-right: 1em;
+	height: 3em;
+
+	color: var(--second-color);
+
+	&:hover {
+			background-color: var(--hover-color);
+			color: var(--second-color);
+			text-decoration: none;
+	}
 }
