--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -6,7 +6,6 @@
 	font: inherit;
 	cursor: pointer;
 	outline: inherit;
-  
 }
 
 .nav__button--vertical {
@@ -23,4 +22,14 @@
 			color: var(--second-color);
 			text-decoration: none;
 	}
+}
+
+.lostCategoryBlock__button {
+	width: 100%;
+	height: 7em;
+	border: 2px solid white;
+	border-radius: 15px;
+	background-color: aqua;
+
+	
 }
