--- a/src/pages/lostAndFound/LostAndFound.css
+++ b/src/pages/lostAndFound/LostAndFound.css
@@ -1,57 +1,56 @@
 
 
-.my-section {
-    
+.lostCategoryBlock {
     padding-top: 2.5em;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     align-content: center;
+
+    
 }
 
-.my-section div {
+.lostCategoryBlock__div {
     width: 33%;
     height: 70%;
     align-items: center;
 }
 
-.my-section div div {
+.lostCategoryBlock__link {
     width:50%;
     margin: auto auto;
     overflow:hidden;
 }
-
-.my-section p {
-    width: 50%;
+.lostCategoryBlock__container {
     margin: auto auto;
+    width: 50%;
+}
+
+.lostCategoryBlock__img{
+    object-fit: cover;
+    width:100%;
+    padding: 0;
+}
+
+.lostCategoryBlock__p{
+    width: 100%;
+    color: white;
     padding-bottom: 2.5em;
 }
 
-.my-section  div div button {
-    width: 100%;
-    height:100px;
-    object-fit: cover;
-    overflow: hidden;
-    border: 2px solid white;
-    border-radius: 15px;
-}
-
-.my-section  div div button img{
-    width: 100%;
-    height:100%;
-    object-fit: cover;
-}
-
 @media only screen and (max-width: 768px) {
-    .my-section div {
-        width: 50%;
-        height: 70%;
-        align-items: center;
+    .lostCategoryBlock {
+        display: flex;
+        flex-direction: column;
+    }
+    .lostCategoryBlock__container {
+        margin: auto auto;
+        width: 100%;
     }
 
-    .my-section div div {
-        width:70%;
-        margin: auto auto;
-        overflow:hidden;
+    .lostCategoryBlock__div {
+        width: 70%;
+        height: 100%;
+        align-items: center;
     }
 }
