--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -55,7 +55,7 @@
         padding: 0;
         margin: 0;
         float: left;
-    
+        width: 100%;
         & li {
             padding: 0 0.2em;
         }
