--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -56,17 +56,31 @@
         margin: 0;
         float: left;
         width: 100%;
+
         & li {
             padding: 0 0.2em;
         }
     }
 
-    
+
 }
 
 @media only screen and (max-width: 768px) {
-    .nav, .nav--vertical {
+    .nav--vertical {
         display: none;
     }
 
+    .nav {
+        height: auto;
+        & ul {
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: center;
+            margin-left: 0;
+            & li {
+                padding-top: .5em;
+                padding-bottom: .5em;
+            }
+        }
+    }
 }
